Support for Jetty 10 and 11, remove Jetty 6 (#62)
* Add Jetty 10 and 11 support
* Remove Jetty 6 support
* Bump versions